<resources>
    <string name="app_name">signup</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="tel">Telephone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="loginbtn">Login</string>
    <string name="alreadyMember">Already a member?</string>
    <string name="NotMember">Not a member?</string>
    <string name="title_activity_dfdgdgd">dfdgdgd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nic">NIC</string>
    <string name="submit">Submit</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="order">Order</string>
    <string name="reserve">Reservation</string>
    <string name="user">User Profile</string>
    <string name="billingD">Billing Details</string>
    <string name="home">Home</string>
    <string name="apptid">ApptId</string>
    <string name="apptdetails">ApptDetails</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create">Create</string>
    <string name="updatenew">UPDATE</string>
    <string name="deletenew">DELETE</string>
    <string name="homenew">Home</string>
    <string name="title_activity_finalize_order">finalize_order</string>
    <string name="title_activity_thankyou">thankyou</string>

</resources>
